[gd_scene load_steps=3 format=4]

[ext_resource type="Script" path="res://UI/card_pile_display.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dcoptsn8erdwh" path="res://UI/panel.tscn" id="2"]

[node name="CardPileDisplay" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 158)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Deck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" parent="VBoxContainer/Label" instance=ExtResource("2")]
z_index = -1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -384.0
offset_top = 18.0
offset_right = 384.0
offset_bottom = 144.0
grow_horizontal = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 5

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -141.0
offset_right = 164.0
offset_bottom = -60.0
grow_vertical = 0
theme_override_font_sizes/font_size = 72
text = "<<"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
